[tool.poetry]
name = "ran"
version = "0.1.0"
description = "Denis project"
authors = ["denchic142 <yarmodeni@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.2"
matplotlib = "^3.6.3"
sweep-design = "^0.2.0"
emd = "^0.5.5"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
